2011-05-22  Adam Barth  <abarth@webkit.org>

        Strict PassOwnPtr build fix.

        * platform/efl/RenderThemeEfl.cpp:
        (WebCore::RenderThemeEfl::adjustProgressBarStyle):

2011-05-22  Andrew Wason  <rectalogic@rectalogic.com>

        Reviewed by Benjamin Poulain.

        [Qt] Implement toImageData() in QtWebKit Bridge
        https://bugs.webkit.org/show_bug.cgi?id=60897

        Tests are in WebKit/qt/tests/hybridPixmap

        * bridge/qt/qt_pixmapruntime.cpp:
        (JSC::Bindings::QtPixmapToImageDataMethod::name):
        (JSC::Bindings::QtPixmapToImageDataMethod::invoke):
        (JSC::Bindings::QtPixmapToImageDataMethod::copyPixels):
        (JSC::Bindings::QtPixmapClass::methodsNamed):
        (JSC::Bindings::QtPixmapInstance::getPropertyNames):
         Add toImageData() to Qt Bridge, alternative to
         assignToHTMLImageElement().

2011-05-22  Dominic Cooney  <dominicc@chromium.org>

        Reviewed by Dimitri Glazkov.

        When removing a shadow root, also remove it from the render tree.
        https://bugs.webkit.org/show_bug.cgi?id=61245

        Test: existing fast/dom/shadow/layout-tests-can-access-shadow.html

        * dom/Element.cpp:
        (WebCore::Element::removeShadowRoot): Call detach if attached.

2011-05-22  Dirk Schulze  <krit@webkit.org>

        Reviewed by Nikolas Zimmermann.

        Don't do manually style resolution for SVGElements with renderer
        https://bugs.webkit.org/show_bug.cgi?id=59176

        General clean-up.

        Don't resolve style manually, instead ask the RenderObject for its style.

        Cleanup svgattrs.in, some SVG element names were accidently listed there as attributes.

        No new tests needed. No change of behavior.

        * svg/SVGFEDiffuseLightingElement.cpp:
        (WebCore::SVGFEDiffuseLightingElement::build):
        * svg/SVGFEDropShadowElement.cpp:
        (WebCore::SVGFEDropShadowElement::build):
        * svg/SVGFEFloodElement.cpp: